--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# Ignore All
-*
-*/*
-# White Lists
-!libs
-!libs/*
-!resources
-!resources/*
-!src
-!src/*
-!.gitignore
-!pom.xml
-!README.md
+# Ignore Target
+target
+target/*
