--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,15 @@
-# Maven target
-/target/
-/log/
-
-# Mac
-.DS_Store
-
-# IntelliJ
-.idea/**/workspace.xml
-.idea/**/misc.xml
-.idea/**/tasks.xml
-.idea/dictionaries
-
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-
-# Gradle:
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# CMake
-cmake-build-debug/
-
-# Mongo Explorer plugin:
-.idea/**/mongoSettings.xml
-
-## File-based project format:
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ Out
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+# ignore all
+*
+# White list
+!lib
+!lib/*
+!resources
+!resources/*
+!src
+!src/*
+!pom.xml
+!LICENSE
+!README.md
+!.gitignore
+# for eclipse
+!.classpath
