--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 			<artifactId>xercesImpl</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.wso2.balana</groupId>
+			<artifactId>balana-core</artifactId>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/balana-core.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.balana</groupId>
+			<artifactId>balana-util</artifactId>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/balana-util.jar</systemPath>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
@@ -64,7 +76,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-					<version>1.8</version>
+					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
 			</plugin>
