--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/balana-util.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
